@@ -1,3 +1,8 @@
+2009-03-02  Alexander Larsson  <alexl@redhat.com>
+
+        * common/gdbusutils.[ch]:
+	Remove unused functions. Pointed out by Tommi Rantala.
+
 2009-02-27  Ryan Lortie  <desrt@desrt.ca>
 
 	* daemon/trashlib/dirwatch.c:
